--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>BrowserJS</title>
     <link rel="stylesheet" href="style.css">
     <script src="sript.js"></script>
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 </head>
 <body>
     <h1>BowserJS</h1>
