--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 </head>
 <body>
-    <h1 onclick="f()">BowserJS</h1>
-
+    <h1>BowserJS</h1>
+    <div id="table"></div>
 </body>
 </html>
