--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BrowserJS</title>
+    <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    <script src="sript.js"></script>
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="script.js"></script>
 </head>
 <body>
-    <h1>BowserJS</h1>
-    <div id="table"></div>
+    <h1>CDNJS használata</h1>
+    <div id="ct">
+        <canvas id="myChart"></canvas>
+    </div>
 </body>
 </html>
+
